--- a/client/package.json
+++ b/client/package.json
@@ -6,24 +6,32 @@
   "scripts": {
     "build": "rollup -c",
     "dev": "rollup -c -w",
-    "start": "sirv public --no-clear"
+    "start": "sirv public --no-clear",
+    "test": "electron ."
   },
   "devDependencies": {
     "@rollup/plugin-commonjs": "^17.0.0",
     "@rollup/plugin-node-resolve": "^11.0.0",
     "electron": "^22.0.0",
+    "less": "^4.1.3",
     "node-sass": "^8.0.0",
+    "postcss": "^8.4.20",
+    "postcss-load-config": "^4.0.1",
+    "pug": "^3.0.2",
     "require-from-url": "^3.1.3",
     "rollup": "^2.3.4",
     "rollup-plugin-css-only": "^3.1.0",
     "rollup-plugin-livereload": "^2.0.0",
     "rollup-plugin-svelte": "^7.0.0",
     "rollup-plugin-terser": "^7.0.0",
-    "svelte": "^3.0.0"
+    "sass": "^1.57.0",
+    "stylus": "^0.55.0",
+    "sugarss": "^4.0.1",
+    "svelte": "^3.0.0",
+    "svelte-preprocess": "^5.0.0",
+    "typescript": "^4.9.4"
   },
   "dependencies": {
-    "sass": "^1.56.2",
-    "sirv-cli": "^2.0.0",
-    "svelte-preprocess": "^5.0.0"
+    "sirv-cli": "^2.0.0"
   }
 }
