--- a/client/package.json
+++ b/client/package.json
@@ -1,36 +1,43 @@
 {
-  "name": "svelte-app",
-  "version": "1.0.0",
-  "private": true,
-  "main": "main.js",
-  "scripts": {
-    "build": "rollup -c",
-    "dev": "rollup -c -w ",
-    "start": "sirv public --no-clear"
-  },
-  "devDependencies": {
-    "@rollup/plugin-commonjs": "^17.0.0",
-    "@rollup/plugin-node-resolve": "^11.0.0",
-    "electron": "^22.0.0",
-    "less": "^4.1.3",
-    "node-sass": "^8.0.0",
-    "postcss": "^8.4.20",
-    "postcss-load-config": "^4.0.1",
-    "pug": "^3.0.2",
-    "require-from-url": "^3.1.3",
-    "rollup": "^2.3.4",
-    "rollup-plugin-css-only": "^3.1.0",
-    "rollup-plugin-livereload": "^2.0.0",
-    "rollup-plugin-svelte": "^7.0.0",
-    "rollup-plugin-terser": "^7.0.0",
-    "sass": "^1.57.0",
-    "stylus": "^0.55.0",
-    "sugarss": "^4.0.1",
-    "svelte": "^3.0.0",
-    "svelte-preprocess": "^5.0.0",
-    "typescript": "^4.9.4"
-  },
-  "dependencies": {
-    "sirv-cli": "^2.0.0"
-  }
+	"name": "pim-gui",
+	"version": "0.0.1",
+	"private": true,
+	"main": "main.cjs",
+	"scripts": {
+		"start": "electron .",
+		"dev": "vite dev",
+		"build": "vite build",
+		"preview": "vite preview",
+		"test": "playwright test",
+		"check": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json",
+		"check:watch": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json --watch",
+		"test:unit": "vitest",
+		"lint": "prettier --plugin-search-dir . --check . && eslint .",
+		"format": "prettier --plugin-search-dir . --write ."
+	},
+	"devDependencies": {
+		"@playwright/test": "^1.28.1",
+		"@sveltejs/adapter-auto": "^1.0.0",
+		"@sveltejs/kit": "^1.0.0",
+		"@typescript-eslint/eslint-plugin": "^5.45.0",
+		"@typescript-eslint/parser": "^5.45.0",
+		"electron": "^22.0.0",
+		"eslint": "^8.28.0",
+		"eslint-config-prettier": "^8.5.0",
+		"eslint-plugin-svelte3": "^4.0.0",
+		"prettier": "^2.8.0",
+		"prettier-plugin-svelte": "^2.8.1",
+		"svelte": "^3.54.0",
+		"svelte-check": "^2.9.2",
+		"tslib": "^2.4.1",
+		"typescript": "^4.9.3",
+		"vite": "^4.0.0",
+		"vitest": "^0.25.3"
+	},
+	"type": "module",
+	"dependencies": {
+		"node-sass": "^8.0.0",
+		"sass": "^1.57.1",
+		"xterm": "^5.1.0"
+	}
 }
